<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="xn_kefu_offline">亲！客服不在线！</string>
    <string name="xn_nonet">网络不给力，请检查网络设置。</string>
    <string name="xn_toast_errorinput">请不要输入空字符</string>
    <string name="xn_toast_initfailed">初始化失败</string>
    <string name="xn_require_evaluation">感谢您的支持，请进行评价</string>
    <string name="xn_valuation_suggestion_hint">此刻的想法</string>
    <string name="xn_company_name">企业名称</string>
    <string name="xn_customer_name">客服名称</string>
    <string name="xn_ad_appraise_vg">非常满意</string>
    <string name="xn_ad_appraise_good">满意</string>
    <string name="xn_ad_appraise_normal">一般</string>
    <string name="xn_ad_appraise_bad">不满意</string>
    <string name="xn_ad_appraise_vb">非常不满意</string>
    <string name="xn_ad_questionstatus">问题解决状态</string>
    <string name="xn_val_going">跟进中</string>
    <string name="xn_val_done">已解决</string>
    <string name="xn_val_no">未解决</string>
    <string name="xn_adviseandfeedback">建议与反馈</string>
    <string name="xn_evaluation_yesorno">是否解决</string>
    <string name="xn_submit_valuation">提交评价</string>
    <string name="xn_leave_message">留言</string>
    <string name="xn_leave_message_close">关闭</string>
    <string name="xn_submit_leavemsg">提交</string>
    <string name="xn_leavemsg_dialogback">返回</string>
    <string name="xn_getservicefail">请求服务失败，请联系服务商</string>
    <string name="xn_tt_leavemsgtip_phone">请输入手机号码</string>
    <string name="xn_tt_leavemsgtip_email">请输入邮箱</string>
    <string name="xn_leavingmsg_notice">公告</string>
    <string name="xn_leavemesg_words_hint2">(必填) :</string>
    <string name="xn_leavemesg_words_hint3">(选填) :</string>
    <string name="xn_input_pe">请输入手机号码或者邮箱</string>
    <string name="xn_toast_cancel">返回</string>
    <string name="xn_leavemesg_words_hint">留言</string>
    <string name="xn_leavemesg_name_hint">姓名</string>
    <string name="xn_leavemesg_tel_hint">电话</string>
    <string name="xn_leavemesg_email_hint">邮箱</string>
    <string name="xn_leavingmsg">正在留言</string>
    <string name="xn_leaved_msg">已留言</string>
    <string name="xn_chatpage_kfname">在线客服</string>
    <string name="xn_chatpage_kfname_more">多人会话</string>
    <string name="xn_chatpage_close">结束会话</string>
    <string name="xn_custom_send">发送</string>
    <string name="nt_string_et_hint">有问题  找客服</string>
    <string name="xn_sdk_presstalk">按住说话</string>
    <string name="xn_sdk_loosestop">松开结束</string>
    <string name="xn_sdk_voice_start_recode">点击开始识别</string>
    <string name="xn_sdk_voice_empty">好像没有说话哟~</string>
    <string name="xn_sdk_voice_failt_recode">识别失败,点击重试!</string>
    <string name="xn_sdk_voice_toast_recode">正在聆听您的声音,请讲话...</string>
    <string name="xn_sdk_havevaluation">已评价</string>
    <string name="xn_function_picture">图片</string>
    <string name="xn_function_album">相册</string>
    <string name="xn_function_camera">拍照</string>
    <string name="xn_function_setting">设置</string>
    <string name="xn_function_video_chat">视频聊天</string>
    <string name="xn_function_emoji">表情</string>
    <string name="xn_function_voice">语音消息</string>
    <string name="xn_function_trans">转人工</string>
    <string name="xn_function_evaluate">评价</string>
    <string name="xn_function_plus">加号</string>
    <string name="xn_function_empty">空白</string>
    <string name="xn_function_order">订单</string>
    <string name="xn_function_video">视频</string>
    <string name="xn_function_conversation_sum">咨询总结</string>
    <string name="xn_function_conversation_fastresponse">常用话术</string>
    <string name="xn_function_conversation_transfer">转接</string>
    <string name="xn_function_conversation_evaluate">邀请评价</string>
    <string name="xn_toast_restoreauthority">请开启存储权限</string>
    <string name="xn_toast_videoauthority">请开启存储、拍照和录音权限</string>
    <string name="xn_toast_storecamauthority">请开启存储和拍照权限</string>
    <string name="xn_toast_chat_video_staring">正在进行视频通话，请稍后再试</string>
    <string name="xn_camera_select">已选%d张</string>
    <string name="xn_camera_select_default">已选0张</string>
    <string name="xn_sdk_nomoreinfo">没有更多聊天内容...</string>
    <string name="xn_sdk_moreinfo">正在加载中...</string>
    <string name="xn_chatpage_back1">返回</string>
    <string name="xn_myimage_back">返回</string>
    <string name="xn_myimage_savelocal">保存到本地</string>
    <string name="xn_normaldialog_title">提示</string>
    <string name="xn_contact_provider">获取服务失败，请联系服务商！</string>
    <string name="xn_cancel_queue">您好，是否放弃排队？</string>
    <string name="xn_close_chat_session">确定结束对话</string>
    <string name="xn_copy">复制</string>
    <string name="xn_copylink">复制链接</string>
    <string name="xn_delete">删除</string>
    <string name="xn_valuation">评价</string>
    <string name="xn_cancel">取消</string>
    <string name="xn_confirm">确定</string>
    <string name="xn_noevaluate">您还不能对本次会话进行评价，谢谢！</string>
    <string name="xn_evaluate_yet">您已经进行评价过了，谢谢！</string>
    <string name="xn_tt_leavemsgtip_content">请填写留言内容，谢谢！</string>
    <string name="xn_tt_leavemsgtip_1">请填写</string>
    <string name="xn_tt_leavemsgtip_2">，谢谢！</string>
    <string name="xn_tt_leavemsgtip_name">请填写您的姓名，谢谢！</string>
    <string name="xn_tt_leavemsgtip_phoneormail">请填写手机号码或者邮箱</string>
    <string name="xn_tt_leavemsgtip_truephone">请填写正确的手机号，谢谢！</string>
    <string name="xn_tt_leavemsgtip_trueemail">请填写正确的邮箱，谢谢！</string>
    <string name="xn_tt_leavemsgtip_righttext">不能输入特殊字符</string>
    <string name="xn_tt_leavemsgtip_success">留言成功,我们会尽快联系您</string>
    <string name="xn_tt_leavemsg_failed">留言失败</string>
    <string name="xn_toast_authority">请开启录音相关权限</string>
    <string name="xn_toast_mediate">亲,您点得太快了</string>
    <string name="xn_valuationtip_hasposted">您的评价已提交,谢谢</string>
    <string name="xn_inputtext_size">您输入的内容已经超过1000字\n请删减后发送 </string>
    <string name="xn_inputvaluatuion_maxsize">评价内容不能超过200个字符</string>
    <string name="xn_inputleavemsg_maxsize">留言内容不能超过400个字符</string>
    <string name="xn_toast_sendfail">发送失败</string>
    <string name="xn_toast_getpicturefailed">找不到图片</string>
    <string name="xn_tt_sdcardtip_nowriteright">获取存储权限失败</string>
    <string name="xn_tt_cameratip_nofindapplication">没有找到相关应用或拍照权限被禁止</string>
    <string name="xn_tt_cameratip_creatfilefailed">创建照片文件失败</string>
    <string name="xn_tt_cameratip_getfilefailed">获取照片文件失败</string>
    <string name="xn_tt_cameratip_cancel">拍照已取消</string>
    <string name="xn_tt_savepicture_success">保存成功</string>
    <string name="xn_tt_savepicture_fail">保存失败</string>
    <string name="xn_tt_savepicture_fail_1">已存在该图片,文件目录为 : </string>
    <string name="xn_tt_savepicture_remind">已下载至 : </string>
    <string name="xn_releasetotalk">松开手指，取消发送</string>
    <string name="xn_fingerslip_totalk">手指上滑，取消发送</string>
    <string name="xn_tooshort">说话时间太短</string>
    <string name="xn_historyinfo">以下为最新消息</string>
    <string name="xn_newinfo">新消息</string>
    <string name="xn_down_more_history">下拉查看更多历史消息</string>
    <string name="xn_no_more_history">无更多消息</string>
    <string name="xn_kefu_leave">您好！客服不在线</string>
    <string name="xn_kefu_offlinetoleave">您好！客服不在线，请留言</string>
    <string name="xn_leave_queue1">您好！客服忙碌中，您排在第1位请稍后或留言</string>
    <string name="xn_leave_queue2">您好！客服忙碌中，您排在第1位请稍后</string>
    <string name="xn_valuation_submit">评价提交失败</string>
    <string name="xn_queuing_toast">亲！客服忙碌中，请稍后！</string>
    <string name="xn_btn_yes">是</string>
    <string name="xn_btn_no">否</string>
    <string name="xn_netinvalid_valuation">亲！无网络，评价暂时不可提交</string>
    <string name="xn_kefu_inputing">正在输入...</string>
    <string name="xn_swifttorobot">转人工</string>
    <string name="hwpush_ability_value" translatable="false">successRateAnalytics</string>
    <string name="xn_trailtitle_home">首页</string>
    <string name="xn_trailtitle_goodslist">商品页</string>
    <string name="xn_trailtitle_goodsdetail">商品详情页</string>
    <string name="xn_trailtitle_shoppingcart">购物车页</string>
    <string name="xn_trailtitle_order">订单页</string>
    <string name="xn_trailtitle_pay">支付页</string>
    <string name="xn_trailtitle_paysuccess">支付成功页</string>
    <string name="simple_sdk_groupname">在线客服</string>
    <string name="xn_consultation_text">咨询总结</string>
    <string name="xn_transfer_text">转接会话</string>
    <string name="xnchatui_back_tip">返回</string>
    <string name="consultation_sum_no_data">请到PC客服端添加咨询总结</string>
    <string name="consultation_no_data">正在为您加载...</string>
    <string name="xn_phasebook_text">常用语</string>
    <string name="phrase_book_no_data">请到PC客服端添加常用语</string>
    <string name="xn_transfer_reception_group_empty_tip">sorry~接待组列表为空</string>
    <string name="xn_transfer_user_empty_tip">sorry~客服列表为空</string>
    <string name="xn_dk_failed">服务器开小差了，再发条消息试试！</string>
    <string name="xn_sdk_satisfaction">满意度</string>
    <string name="xn_sdk_resolved">是否解决问题</string>
    <string name="xn_sdk_advise">建议与反馈</string>
    <string name="xn_sdk_kefuname">在线客服</string>
    <string name="xn_sdk_defaulttrailopenwin">打开聊窗</string>
    <string name="xn_sdk_closeconver">确定结束当前会话吗?</string>
    <string name="xn_sdk_msgoutdate">您请求的消息已过期</string>
    <string name="xn_app_undefine">对方未确定</string>
    <string name="xn_app_cancelswift">已取消转接</string>
    <string name="xn_app_inviteevaluate">您的评价邀请已发出</string>
    <string name="xn_app_converintercept">会话被意外终止</string>
    <string name="xn_app_more_text">您输入的内容超长,将为您分条发送,每条最多400字.</string>
    <string name="xn_commontongue">普通话</string>
    <string name="xn_speakover">说完了</string>
    <string name="xn_continuespeak">继续讲</string>
    <string name="xn_recognizing">识别中</string>
    <string name="xn_voice_error_default">您好像没有说话哦</string>
    <string name="xn_voice_error_no_result">未能识别到您的声音，请重试</string>
    <string name="xn_voice_error_net_invalid">网络异常，请检查网络</string>
    <string name="xn_netlost">您的网络好像有问题哦\n请检查网络</string>
    <string name="xn_toast_recordauthority">请开启录音权限</string>
    <string name="xn_voice_message">语音消息</string>
    <string name="xn_voice_recognition">语音识别</string>
    <string name="xn_swiftTorobot">人工客服暂不在线，您可以继续与机器人聊天或者留言</string>
    <string name="xn_video_waiting_mobile_net_hint">在移动网络环境下会影响视频通话质量,并产生手机流量费,确定并继续</string>
    <string name="xn_video_open_camera">打开摄像头</string>
    <string name="xn_video_close_camera">关闭摄像头</string>
    <string name="xn_video_open_voice">打开麦克风</string>
    <string name="xn_video_close_voice">关闭麦克风</string>
    <string name="xn_video_">未接听</string>
    <string name="xn_video_open_flashlight">打开手电筒</string>
    <string name="xn_video_close_flashlight">关闭手电筒</string>
    <string name="xn_video_reverse_camera">翻转摄像头</string>
    <string name="xn_maybephone">aaa可能是一个电话号码，您可以进行以下操作</string>
    <string name="xn_phone_copy">复制</string>
    <string name="xn_phone_call">呼叫</string>
    <string name="xn_phone_cancle">取消</string>
    <string name="xn_video_starting">您正在视频通话中...</string>
    <string name="xn_video_net_error">您当前的网络较差</string>
    <string name="nt_start_video_chat">发起通话</string>
    <string name="nt_exit_video_chat">结束通话</string>
    <string name="nt_exit_not_net_video_chat">当前网络环境不好 结束通话</string>
    <string name="nt_answer_video_chat">已接起</string>
    <string name="nt_reject_video_chat">已拒绝</string>
    <string name="nt_picture_message">[图片消息]</string>
    <string name="nt_video_message">[视频消息]</string>
    <string name="nt_voice_message">[语音消息]</string>
    <string name="nt_text_message">[文本消息]</string>
    <string name="nt_hypermedia_message">[超媒体消息]</string>
    <string name="nt_camera_remind_1">您的手机不支持前置摄像</string>
    <string name="nt_camera_remind_2">您的手机不支闪光</string>
    <string name="nt_camera_remind_3">正在上传图片</string>
    <string name="nt_camera_remind_4">松开取消</string>
    <string name="nt_camera_remind_5">至少要录制到这里呦</string>
    <string name="nt_camera_remind_6">长按录制</string>
    <string name="nt_second">秒</string>
    <string name="nt_camera_fail">拍摄失败</string>
    <string name="nt_camera_fail_2">点的太快啦!</string>
    <string name="nt_camera_fail_3">您的内存不足</string>
</resources>