<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e0e0e2"
            >
        <TextView
            android:id="@+id/tv_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xn_maybephone"
            android:padding="2dp"
            android:textColor="#666666"
            android:textSize="14sp" />
        </RelativeLayout>

            <TextView
            android:id="@+id/tv_numbercall"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/xn_white"
            android:gravity="center"
            android:text="@string/xn_phone_call"
            android:textColor="#0684ea"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/xn_popgray"
            android:orientation="horizontal" />
        <TextView
            android:id="@+id/tv_numbercopy"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/xn_phone_copy"
            android:textColor="#0684ea"
            android:textSize="16sp" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/xn_popgray"
            android:orientation="horizontal" />
        <TextView
            android:id="@+id/tv_numbercancle"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/xn_white"
            android:gravity="center"
            android:text="@string/xn_phone_cancle"
            android:textColor="#666666"
            android:textSize="16sp" />

    </LinearLayout>
</RelativeLayout>
