<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:skin="http://schemas.android.com/android/skin"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="fill_parent"
            android:layout_height="43dp"
            android:background="@drawable/nt_top_fillet_white"
            android:gravity="center"
            android:text="@string/xn_normaldialog_title"
            android:textColor="#121212"
            android:textSize="17dp" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="#d2d2d2" />
        
        <TextView
            android:id="@+id/tv_contents"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32.5dp"
            android:layout_marginTop="32.5dp"
            android:gravity="center_horizontal"
            android:text="@string/xn_getservicefail"
            android:textColor="#474747"
            android:textSize="14dp" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="#d2d2d2" />
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            
            <TextView
                android:id="@+id/tv_tocancel"
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginBottom="7dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="@string/xn_cancel"
                android:textColor="#9a9a9a"
                android:textSize="16dp"
                skin:enable="true" />
            
            <View
                android:layout_width="0.3dp"
                android:layout_height="match_parent"
                android:background="#d2d2d2" />
            
            <TextView
                android:id="@+id/tv_toconfirm"
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginBottom="7dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="@string/xn_confirm"
                android:textColor="@color/theme_text_color"
                android:textSize="16dp"
                skin:enable="true" />
        </LinearLayout>
    
    </LinearLayout>
</LinearLayout>