<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_voicetotext"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible">

    <RelativeLayout
        android:id="@+id/rl_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/xn_commlau">

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/xn_commontongue"
            android:textColor="#666666" />

        <ImageView
            android:id="@+id/btn_shut"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:background="@drawable/closevoice" />
    </RelativeLayout>

    <TextView
        android:id="@+id/btn_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/xn_speakover"
        android:textColor="#cccccc" />

    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_control"
        android:layout_below="@id/rl_status">

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:visibility="gone"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/xn_netlost"
            android:textColor="#666666"
            android:textSize="12sp" />

        <cn.ntalker.uiview.wave.IFlyWaveView
            android:id="@+id/wave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" />

        <cn.ntalker.uiview.IFlyProgress
            android:id="@+id/progress"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:visibility="gone"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</RelativeLayout>
