<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/xn_white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_consultation_top"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/nt_background_blue_pure" >

        <TextView
            android:id="@+id/tv_sum_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/xn_consultation_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:ignore="UnusedIds" />

        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" >

            <ImageView
                android:id="@+id/iv_keyback"
                android:layout_width="24dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/nt_chat_keyback_white"
                tools:ignore="UnusedIds" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_trad_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_consultation_top"
        android:background="@color/xn_page_background"
        android:orientation="vertical"
        tools:ignore="UnusedIds">

        <cn.ntalker.uiview.XNExpandableListView
            android:id="@+id/lv_consum_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null" >
        </cn.ntalker.uiview.XNExpandableListView>

        <LinearLayout
            android:id="@+id/ll_empty_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:text="@string/consultation_no_data"
                android:textColor="#7f7f7f"
                android:textSize="16sp" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_consultation_sum_empty_list_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/nt_emptyview_nodata" >
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:text="@string/consultation_sum_no_data"
                android:textColor="#7f7f7f"
                android:textSize="16sp" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>